deleting group form statistics
